# oxycord

./: .gitignore  Cargo.toml  build.rs  building-for-windows  loaders.cache  oxycord.rc
src/: async_abstractions.rs  data.rs  extract_token.js  main.rs  style.css
