[package]
name = "oxycord"
version = "0.1.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.9"
gio = "0.9"
gdk = "0.13"
gdk-pixbuf = "0.9"
tokio = { version = "0.3", features = ["full"] }
directories-next = "2.0"
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
futures = "0.3.7"